
	* aws-server.adb:
	(Accept_Socket_Serialized): Do not Free socket on shutdown.
	 It was not allocated. Always accept non-SSL socket, and make SSL socket
	 after semaphore release. This would move potentially long blocking operation
	 out of critical section.

	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
	(Remove_Socket): One more Remove_Socket routine.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net.ads, aws-net-std.ads:
	(Peer_Port): New routine.

	* aws-net.adb:
	(Socket_Pair): Be shure that S1 and S2 are connected together.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net.ads:
	(Get_Port): New abstract routine.
	(Socket_Pair): New routine.
	(Bind): Add comment about 0 value in Port parameter.

	* aws-net.adb, aws-net-ssl.ads, aws-net-ssl.adb:
	(Socket_Pair): New routine.

	* aws-net-std.ads:
	(Get_Port): New routine.

2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-log.ads, aws-log.adb:
	(Write): Type of Content_Length parameter is Response.Content_Length_Type.
	 Do not try to show Undefined_Length in log file, Constraint_Error would
	 occur. ??? Maybe we should write something in this case.
	Update copyright years.

2005-08-01  Pascal Obry  <pascal@obry.net>

	* aws-net.adb:
	Minor style fix.
	Update copyright notice.

	* aws-server-protocol_handler.adb:
	Remove lot of routines which are now in AWS.Client.HTTP_Utils.
	The code has been moved for the PolyORB interoperability.
	Update copyright notice.
	Code reorganisation contributed by Selvaratnam Senthuran.
	Work for D609-015.

	* aws-server.adb:
	(File_Upload_UID): Move to AWS.Server.HTTP_Utils.
	Minor reformatting.
	Code reorganisation contributed by Selvaratnam Senthuran.
	Work for D609-015.

	* aws-server.ads:
	Minor reformatting.

	* aws-client.adb:
	Remove lot of routines which are now in AWS.Client.HTTP_Utils.
	The code has been moved for the PolyORB interoperability.
	Update copyright notice.