@@ -21,6 +21,7 @@
 
 	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
 	(Remove_Socket): One more Remove_Socket routine.
+	(Is_Read_Ready): One more Is_Read_Ready routine.
 
 2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
